# rlite

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile  Makefile.in  README.md  RH  TODO  configure  flavours.conf  history.sh  in.prepare.sh  in.unprepare.sh  install-kernelspace  plot-history.py  prepare.sh  rina-ctrl.c  rina-ctrl.h  stress.sh  unprepare.sh
archlinux/: .SRCINFO  PKGBUILD  PKGBUILD.local  rlite-node-config.service  rlite.conf  rlite.service
ci/: ci.py  gen.conf  gen.py
common/: ker-numtables.c  rina-kernel-numtables.c  rina-utils.c  rinalite-utils.c  rlite-ker-numtables.c  rlite-utils.c  serdes.c  utils.c
demo/: access.sh  clean.sh  configen.py  demo.conf  demo.py  enroll-chart.py  libdemo.py  mac2ifname.c
demo/buildroot/: buildroot_rsa  buildroot_rsa.pub
demo/examples/: asymmetric-stacking.conf  ceft-dft.conf  eth-handover.conf  europe-vpns-small.conf  europe-vpns.conf  europe.conf  insane-stacking.conf  resilient-square.conf  seven.conf  star.conf  triangle.conf  two-layers.conf  udp4.conf  webserver-gw.conf
include/rina/: api.h  cdap.hpp  rina-application-msg.h  rina-application-numtables.h  rina-common.h  rina-conf-msg.h  rina-ctrl.h  rina-ipcp-types.h  rina-kernel-msg.h  rina-kernel-numtables.h  rina-msg-numtables.h  rina-utils.h  rinalite-common.h  rinalite-utils.h  serdes.h
include/rinalite/: conf-msg.h  kernel-msg.h  rina-conf-msg.h  rina-kernel-msg.h  rinalite-common.h  rinalite-utils.h  utils.h
kernel/: Makefile  Makefile.in  bufs.c  ctrl-dev.c  efcp-utils.c  generate-flavours.sh  io-dev.c  ker-numtables.c  main.c  memtrack.c  normal-common.c  normal.c  prepare.sh  rina-bufs.c  rina-bufs.h  rina-ctrl-main.c  rina-ctrl.c  rina-efcp.c  rina-ipcp.h  rina-kernel.h  rina-normal.c  rina-pci.h  rina-shim-dummy.c  rina-shim-eth.c  rina-shim-hv-main.c  rina-shim-hv-msg.h  rina-shim-hv-numtables.c  rina-shim-loopback.c  rina-utils.c  rina-utils.h  rinalite-kernel.h  rinalite-main.c  rinalite-utils.c  rlite-bufs.h  rlite-ker-numtables.c  rlite-kernel.h  shim-eth.c  shim-hv-msg.h  shim-hv-numtables.c  shim-hv.c  (+6 more)
scenario/: ci.py  common.py  down.sh  gen.conf  gen.py  mac2ifname.c  program.sh  up.sh
scripts/: build-kernel-version  build-kernels-all  history.sh  plot-history.py  plot-input.py  prepare.sh  replace  rlog.sh
tests/: 1.sh  2normal-dummy-up.sh  2normal-loopback-down.sh  2normal-loopback-up.sh  CMakeLists.txt  check-format.sh  down.sh  dummy-down.sh  dummy-up.sh  env.sh  epilogue.sh  eth-down.sh  eth-up.sh  hv-down.sh  hv-up.sh  inet4-down.sh  inet4-up.sh  insanely-stack-down.sh  insanely-stack-up.sh  libtest.sh  loopback-down.sh  loopback-up.sh  normal-dummy-down.sh  normal-dummy-up.sh  normal-eth-down.sh  normal-eth-up.sh  normal-hv-down.sh  normal-hv-up.sh  normal-loopback-down.sh  normal-loopback-up.sh  parallel-clients.sh  parallel-servers.sh  perftests.gnuplot  perftests.py  prologue.sh  randclients.py  rina-rand-clients.py  rinaperfs.txt  rlite-rand-clients  run-integration-tests.sh  (+4 more)
user/: CMakeLists.txt  Makefile  application.c  application.h  cdap.cpp  cdap.hpp  client.c  evloop.c  evloop.h  helpers.c  helpers.h  ipcm.c  ipcm.h  list.h  pending_queue.c  pending_queue.h  rina-application-numtables.c  rina-conf-numtables.c  rina-config.c  rina-kernel-numtables.c  rina-utils.c  rinalite-appl.c  rinalite-appl.h  rinalite-conf.c  rinalite-conf.h  rinalite-evloop.c  rinalite-evloop.h  rinalite-list.h  rinalite_appl.c  rinalite_appl.h  rinalite_evloop.c  rinalite_evloop.h  rinaperf.c  rlite-appl.c  rlite-appl.h  rlite-conf.c  rlite-conf.h  rlite-evloop.c  rlite-evloop.h  rlite-list.h  (+26 more)
user/libs/: CDAP.proto  CMakeLists.txt  api.c  appl.c  cdap-test.cpp  cdap.cpp  conf-numtables.c  conf.c  ctrl-utils.h  ctrl.c  evloop.c  ker-numtables.c  memtrack.c  pending_queue.c  pending_queue.h  raft-test.cpp  raft.cpp  rina-conf-numtables.c  rina-kernel-numtables.c  rlite-appl.c  rlite-conf-numtables.c  rlite-conf.c  rlite-evloop.c  rlite-ker-numtables.c  rlite-utils.c  rlite.i  test-cdap.cpp  uipcps-numtables.c  utils.c  wifi.c
user/libs/swig/: CMakeLists.txt  cdap.i  rlite.i  rlite.py  swig.sh
user/libs/wpa-supplicant/: CMakeLists.txt  hostapd.conf  wpa_supplicant.conf
user/tools/: CMakeLists.txt  fdfwd.cpp  fdfwd.hpp  inet-echo  inet-rr-tool  inet-rr-tool.py  inet-toy  initscript  iporina.cpp  iporina.proto  iporinad.conf  iporinad.cpp  mac2ifname.c  rina-config.c  rina-echo  rina-echo-async.c  rina-echo.c  rina-gw.conf  rina-gw.cpp  rina-rr-tool  rina-rr-tool-raw  rina-rr-tool.c  rina-rr-tool.py  rina-toy  rinaperf.c  rlite-config.c  rlite-ctl.c  rlite-node-config  rlite-node-config.py  test-wifi.c
user/tools/rinacat/: CMakeLists.txt  README.md  rinacat.c
user/uipcp-gpb/: CommonMessages.proto  DirectoryForwardingTableEntryArrayMessage.proto  FlowMessage.proto  PolicyDescriptorMessage.proto  QoSSpecification.proto
user/uipcps/: CMakeLists.txt  lfdb-bw-test.cpp  lfdb-test.cpp  policy-deps-test.cpp  shim-tcp4-dir  test-wifi.c  test-wifi.h  uipcp-container.c  uipcp-container.h  uipcp-normal-addr-alloc.cpp  uipcp-normal-appl-reg.cpp  uipcp-normal-ceft.cpp  uipcp-normal-ceft.hpp  uipcp-normal-codecs.cpp  uipcp-normal-codecs.hpp  uipcp-normal-enroll.cpp  uipcp-normal-flow-alloc.cpp  uipcp-normal-lfdb.cpp  uipcp-normal-lfdb.hpp  uipcp-normal-lower-flows.cpp  uipcp-normal-lower-flows.hpp  uipcp-normal-qos.cpp  uipcp-normal.cpp  uipcp-normal.hpp  uipcp-qoscubes.qos  uipcp-shim-inet4.c  uipcp-shim-tcp4.c  uipcp-shim-udp4.c  uipcp-shim-wifi.c  uipcp-unix.c  wpa_supplicant.conf
user/uipcps/uipcp-gpb/: AddressAllocation.proto  ApplicationProcessNamingInfoMessage.proto  BaseRIB.proto  BwRes.proto  CommonMessages.proto  ConnectionPoliciesMessage.proto  DirectoryForwardingTableEntryArrayMessage.proto  DirectoryForwardingTableEntryMessage.proto  EnrollmentInformationMessage.proto  FlowMessage.proto  FlowStateGroupMessage.proto  FlowStateMessage.proto  NeighborArrayMessage.proto  NeighborMessage.proto  PolicyDescriptorMessage.proto  QoSSpecification.proto  Raft.proto
user/uipcps/wpa-supplicant/: build_config.h
(+56 files in other folders)
